--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="jumbotron">
-    <h1 class="text-center"> API Test</h1>
+    <h1 class="text-center"> API Test 2</h1>
 
   </div>
 
